[package]
name = "gamecast-services"
version = "0.1.0"
authors = ["Kurt Hartmann <extramileit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.25", features = ["full"] }
futures = "0.3.12"
futures-util = "0.3.12"
bytes = "1.0.1"

# communication with kafka
rdkafka = "0.24.0"

log = "0.4.14"
simple_logger = "1.11.0"

# parsing and deparsing messages received via kafka
serde = "1.0.123"
serde_json = "1.0.62"

#redux
redux-rs = "0.1.0"

chrono = "0.4.19"

#persistence
mongodb = "1.2.0"
